; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_get_inuse_address_list.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_kpi_interface.c_ifnet_get_inuse_address_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ifnet_get_inuse_address_list(i32 %0, i32** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32**, align 8
  store i32 %0, i32* %3, align 4
  store i32** %1, i32*** %4, align 8
  %5 = load i32**, i32*** %4, align 8
  %6 = icmp eq i32** %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load i32, i32* @EINVAL, align 4
  br label %14

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = load i32**, i32*** %4, align 8
  %12 = load i32, i32* @M_NOWAIT, align 4
  %13 = call i32 @ifnet_get_address_list_family_internal(i32 %10, i32** %11, i32 0, i32 0, i32 %12, i32 1)
  br label %14

14:                                               ; preds = %9, %7
  %15 = phi i32 [ %8, %7 ], [ %13, %9 ]
  ret i32 %15
}

declare dso_local i32 @ifnet_get_address_list_family_internal(i32, i32**, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
